# depends-ui

./: AUTHORS  configure.in.in  depends.pro
depends/: dependencyjob.cpp  dependencyjob.h  depends.pro  dependsui.cpp  dependsui.h  dependsuibase.ui  imagecollection.h  importsexportsjob.cpp  importsexportsjob.h  initjob.cpp  initjob.h  main.cpp
doc/: Makefile.am  Makefile.in
doc/en/: Makefile.am  Makefile.in  index.docbook
src/: Makefile.am  dependencyjob.cpp  dependencyjob.h  dependsui.cpp  importsexportsjob.cpp  importsexportsjob.h  initjob.cpp
